{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 80,
  "lineage": "b386d3e7-f901-9380-150e-0fb802fd14df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:555065207695:instance/i-0daf76b7e601da216",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-globo-web-app-10869-ec2_read_s3_profile",
            "id": "i-0daf76b7e601da216",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0053a777941c25a9f",
            "private_dns": "ip-10-0-0-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.74",
            "public_dns": "ec2-34-201-106-143.compute-1.amazonaws.com",
            "public_ip": "34.201.106.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028763290f726c3d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04dab2afbef4f5c3f",
            "tags": {
              "Name": "dev-globo-web-app-ec2-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-ec2-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015724db27e8c9bf5"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dev-globo-web-app-10869",
                "enabled": true,
                "prefix": "lb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/9860dce00e3c61bc",
            "arn_suffix": "app/dev-globo-web-app-lb/9860dce00e3c61bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-globo-web-app-lb-750607713.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/9860dce00e3c61bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-globo-web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c1f77e248d0b3766"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b523c86c5cbf188"
              },
              {
                "subnet_id": "subnet-04dab2afbef4f5c3f"
              }
            ],
            "subnets": [
              "subnet-04b523c86c5cbf188",
              "subnet-04dab2afbef4f5c3f"
            ],
            "tags": {
              "Name": "dev-globo-web-app-lb",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-lb",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/dev-globo-web-app-lb/9860dce00e3c61bc/888df8eab524e5b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/dev-globo-web-app-lb/9860dce00e3c61bc/888df8eab524e5b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/dev-globo-web-app-lb/9860dce00e3c61bc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "dev-globo-web-app-listener",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-listener",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed",
            "arn_suffix": "targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-globo-web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-globo-web-app-tg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-tg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed-20230802091051903200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/dev-globo-web-app-tg/8a4a053e0b3a5fed",
            "target_id": "i-0daf76b7e601da216"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-0c1f77e248d0b3766",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1f77e248d0b3766",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-globo-web-app-lb-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-lb-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-lb-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-015724db27e8c9bf5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015724db27e8c9bf5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-globo-web-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-ec2-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-ec2-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:network-acl/acl-0327d05e4257af65d",
            "default_network_acl_id": "acl-0327d05e4257af65d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0327d05e4257af65d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "555065207695",
            "subnet_ids": [
              "subnet-04b523c86c5cbf188",
              "subnet-04dab2afbef4f5c3f"
            ],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-0dc1ca4e9662e1518",
            "default_route_table_id": "rtb-0dc1ca4e9662e1518",
            "id": "rtb-0dc1ca4e9662e1518",
            "owner_id": "555065207695",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-0e9e32693b1f9a100",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e9e32693b1f9a100",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:internet-gateway/igw-0ecb003b2aa8f70b2",
            "id": "igw-0ecb003b2aa8f70b2",
            "owner_id": "555065207695",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecb003b2aa8f70b2",
            "id": "r-rtb-05aa799b56e5ae7581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05aa799b56e5ae758",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-05aa799b56e5ae758",
            "id": "rtb-05aa799b56e5ae758",
            "owner_id": "555065207695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0478246e9fdbc8c1d",
            "route_table_id": "rtb-05aa799b56e5ae758",
            "subnet_id": "subnet-04dab2afbef4f5c3f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0980ac3fea7176cba",
            "route_table_id": "rtb-05aa799b56e5ae758",
            "subnet_id": "subnet-04b523c86c5cbf188"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-04dab2afbef4f5c3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dab2afbef4f5c3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-04b523c86c5cbf188",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b523c86c5cbf188",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-00e338e57aa603c51"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:vpc/vpc-00e338e57aa603c51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0327d05e4257af65d",
            "default_route_table_id": "rtb-0dc1ca4e9662e1518",
            "default_security_group_id": "sg-0e9e32693b1f9a100",
            "dhcp_options_id": "dopt-0aad078b2c96e0168",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e338e57aa603c51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc1ca4e9662e1518",
            "owner_id": "555065207695",
            "tags": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "dev",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}